tpm and tmux reload

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -31,3 +31,8 @@ set -sg escape-time 1
 # don't rename windows automatically
 set -g allow-rename off
 
+# use tmux-ressurect to save tmux session state
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+
+# setup tmux-plugin-manager
+run '~/.tmux/plugins/tpm/tpm'
